<resources>
    <string name="app_name">Daily Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="price">Price</string>
    <string name="price1">Price :</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="date">Date </string>
    <string name="product2">Product :</string>
    <string name="quantity2">Quantity :</string>
    <string name="saved_history">Saved History</string>
    <string name="delete_all">Delete All</string>
    <string name="total">Total</string>
    <string name="select_start_and_end_date_between_your_total">Select Start and End Date between your Total</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="options">Options</string>
    <string name="empty">Empty</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="creator">Created by <b>ANKUR KUSHWAHA</b></string>
    <string name="screen1"> Quick and Easy </string>
    <string name="screen2">Customizable Categories</string>
    <string name="screen3">Expense History</string>
    <string name="screen4">Visual Insights</string>
    <string name="desc1">Quickly add your expenses with a user-friendly interface. Capture details such as item, quantity, amount, date, and category in seconds.</string>
    <string name="desc2">Tailor expense categories to match your lifestyle. Whether it\'s groceries, entertainment, or travel, personalize your spending classifications. </string>
    <string name="desc3">Easily access and review your expense history. Retrieve past records, edit details, or analyze trends for better financial planning.</string>
    <string name="desc4">Gain a clear understanding of your spending habits with insightful charts and graphs. Visualize your financial trends to make informed decisions.</string>
    <string name="version">VERSION</string>
    <string name="contact">Contact</string>
    <string name="follow_us_on">Follow Us on</string>
    <string name="call_us">Call us</string>
    <string name="mail_us">Mail Us</string>
    <string name="message_us">Message us</string>
</resources>