<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#7FB1C8"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:id="@+id/recyclerRow">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AFCEDD">
        <TableRow>
            <TextView
                android:id="@+id/showDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/showQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/showSpinnerValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product2"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_shopping_bag_24"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/showProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:drawableStart="@drawable/baseline_currency_rupee_24"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/showPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>