<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/totalDialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_start_and_end_date_between_your_total"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/dialogDismiss"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/baseline_cancel_24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5sp">
            <EditText
                android:id="@+id/txtStartDate"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:background="@drawable/textfield"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/start_date"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="date"/>
            <ImageView
                android:id="@+id/imgStartDate"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/baseline_calendar_month_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5sp">
            <EditText
                android:id="@+id/txtEndDate"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:background="@drawable/textfield"
                android:hint="@string/end_date"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="date"/>
            <ImageView
                android:id="@+id/imgEndDate"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:src="@drawable/baseline_calendar_month_24"/>
        </LinearLayout>
<!--        <Spinner-->
<!--            android:id="@+id/spinMonth"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="30sp"-->
<!--            android:background="@drawable/textfield"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/totalBetween"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total"
                android:textColor="@color/black"
                android:layout_margin="6sp"
                style="@style/MyButtonStyle"/>
            <Button
                android:id="@+id/deleteBetween"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/MyButtonStyle"
                android:layout_margin="6sp"
                android:text="@string/delete_all" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>