<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".ContactUsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Contact And Support"
        app:titleTextColor="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/contact_us"
            app:lottie_renderMode="automatic"
            app:lottie_loop="true" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp"
            android:backgroundTint="#F1EAEA">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:background="#F1EAEA"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="25sp"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <Button
                    android:id="@+id/btnCall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/call_us"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:backgroundTint="#4D99BB"
                    android:textSize="22sp"/>
                <Button
                    android:id="@+id/btnMsg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/message_us"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:backgroundTint="#4D99BB"
                    android:textSize="22sp"/>
                <Button
                    android:id="@+id/btnMail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mail_us"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:backgroundTint="#4D99BB"
                    android:textSize="22sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:background="#fff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#F1EAEA"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_us_on"
                    android:textSize="25sp"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="#91D1ED">
                    <ImageView
                        android:id="@+id/imgLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/linkedin"
                        android:layout_weight="1"
                        android:layout_margin="20dp"/>
                    <ImageView
                        android:id="@+id/imgX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/twitter"
                        android:layout_margin="20dp"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/imgGithub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/github"
                        android:layout_margin="20dp"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>